--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><!-- 🌟 SEO Meta Tags for Focus Makashfa -->
+<meta name="description" content="Focus Makashfa — Creativity Pays. A space where creativity meets purpose. Explore art, ideas, and inspiration that shape our changing world.">
+<meta name="keywords" content="creativity, innovation, Focus Makashfa, art, design, imagination, education, creative thinking, change, world">
+<meta name="author" content="Focus Makashfa">
+
+<!-- Social Media Sharing -->
+<meta property="og:title" content="Focus Makashfa — Creativity Pays">
+<meta property="og:description" content="Discover creativity, art, and inspiration that pay in a changing world.">
+<meta property="og:image" content="https://wekulo-hue.github.io/Focus-Makashfa/dog.jpg">
+<meta property="og:url" content="https://wekulo-hue.github.io/Focus-Makashfa/">
+<meta name="twitter:card" content="summary_large_image">
+
+<!-- Favicon (optional if you add one later) -->
+<link rel="icon" href="dog.jpg" type="image/jpg">
+<title>Focus Makashfa — Creativity Pays</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Focus Insights</title>
