--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><!-- 🌟 SEO Meta Tags for Focus Makashfa -->
+<head><!-- 🌟 SEO Meta Tags for Focus Makashfa --><meta name="google-site-verification" content="c-H0T-HrWVsHt5iFDeJ3Xr__Qe6R5Mv88PQp8GvT470" />
 <meta name="description" content="Focus Makashfa — Creativity Pays. A space where creativity meets purpose. Explore art, ideas, and inspiration that shape our changing world.">
 <meta name="keywords" content="creativity, innovation, Focus Makashfa, art, design, imagination, education, creative thinking, change, world">
 <meta name="author" content="Focus Makashfa">
